--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "6.0.0-alpha.10",
     "@mui/x-data-grid": "^6.18.6",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query-devtools": "^5.15.5",
     "axios": "^1.6.3",
     "react": "^18.2.0",
