--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.4"
   },
   "devDependencies": {
