--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "6.0.0-alpha.10",
     "@mui/x-data-grid": "^6.18.6",
