--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
+    "react-redux": "^9.0.4",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.4"
   },
