--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.1.4"
+    "styled-components": "^6.1.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
